fixing some width/overflow issues for mobile rendering

--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -2,6 +2,7 @@
 	margin: 0 auto;
 	padding: 0 $m-size;
 	max-width: 110rem;
+	overflow: hidden;
 }
 
 .content-container__header {
